<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.example.administrator.testsliding.view.MyTopBar
        android:id="@+id/topbar_terminalResult01"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        custom:leftBackground="@drawable/ic_menu_back"
        custom:rightBackground="@drawable/iconfont_earth2"
        custom:titleText="全部台站属性"
        custom:titleText_Color="#ffffff"
        custom:titleTextSize="8sp">

    </com.example.administrator.testsliding.view.MyTopBar>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dip"
        android:background="#ccc"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textColor="#850"
            android:gravity="center"
            android:text="@string/stationNum" />
        <View
            android:background="#000000"
            android:layout_width="1dp"
            android:layout_height="match_parent">

        </View>

        <com.example.administrator.testsliding.view.CHScrollView_StationAll
            android:id="@+id/item_scroll_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >
                <TextView
                    android:text="@string/organizer"
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:textColor="#850"
                    android:gravity="center" />
                <View
                    android:background="#cccccc"
                    android:layout_width="1dp"
                    android:layout_height="match_parent">

                </View>
                <TextView
                    android:text="@string/IDcard"
                    android:layout_width="100dip"
                    android:textColor="#850"
                    android:layout_height="fill_parent"
                    android:gravity="center" />
                <View
                    android:background="#cccccc"
                    android:layout_width="1dp"
                    android:layout_height="match_parent">

                </View>

                <TextView
                    android:text="@string/location"
                    android:layout_width="130dip"
                    android:layout_height="fill_parent"
                    android:textColor="#850"
                    android:gravity="center" />
                <View
                    android:background="#cccccc"
                    android:layout_width="1dp"
                    android:layout_height="match_parent">

                </View>

                <TextView
                    android:text="@string/range"
                    android:layout_width="150dip"
                    android:textColor="#850"
                    android:layout_height="fill_parent"
                    android:gravity="center" />
                <View
                    android:background="#cccccc"
                    android:layout_width="1dp"
                    android:layout_height="match_parent">

                </View>

                <TextView
                    android:text="@string/power"
                    android:layout_width="100dip"
                    android:textColor="#850"
                    android:layout_height="fill_parent"
                    android:gravity="center" />
                <View
                    android:background="#cccccc"
                    android:layout_width="1dp"
                    android:layout_height="match_parent">

                </View>

                <TextView
                    android:text="@string/band"
                    android:layout_width="100dip"
                    android:textColor="#850"
                    android:layout_height="fill_parent"
                    android:gravity="center" />
                <View
                    android:background="#cccccc"
                    android:layout_width="1dp"
                    android:layout_height="match_parent">

                </View>

                <TextView
                    android:text="@string/modem"
                    android:layout_width="100dip"
                    android:textColor="#850"
                    android:layout_height="fill_parent"
                    android:gravity="center" />
                <View
                    android:background="#cccccc"
                    android:layout_width="1dp"
                    android:layout_height="match_parent">

                </View>
                <TextView
                    android:text="@string/modemPara"
                    android:layout_width="100dip"
                    android:textColor="#850"
                    android:layout_height="fill_parent"
                    android:gravity="center" />
                <View
                    android:background="#cccccc"
                    android:layout_width="1dp"
                    android:layout_height="match_parent">

                </View>
                <TextView
                    android:text="@string/attributes"
                    android:layout_width="100dip"
                    android:textColor="#850"
                    android:layout_height="fill_parent"
                    android:gravity="center" />
                <View
                    android:background="#cccccc"
                    android:layout_width="1dp"
                    android:layout_height="match_parent">

                </View>
                <TextView
                    android:text="@string/radius"
                    android:layout_width="100dip"
                    android:textColor="#850"
                    android:layout_height="fill_parent"
                    android:gravity="center" />
                <View
                    android:background="#cccccc"
                    android:layout_width="1dp"
                    android:layout_height="match_parent">

                </View>
                <TextView
                    android:text="@string/liveness"
                    android:layout_width="100dip"
                    android:textColor="#850"
                    android:layout_height="fill_parent"
                    android:gravity="center" />

            </LinearLayout>
        </com.example.administrator.testsliding.view.CHScrollView_StationAll>
    </LinearLayout>

    <ListView
        android:id="@+id/scroll_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:cacheColorHint="@android:color/transparent"
        android:scrollbars="none" >
    </ListView>


</LinearLayout>
