<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="选择频率范围"
        android:textSize="18sp"
        android:gravity="bottom"
        android:textColor="#000000"
        android:background="#73b9a2"

        />

        <RadioGroup
            android:id = "@+id/select_model_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/munual_select_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/handSetting"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/midiuFreq" />
                <EditText
                    android:id="@+id/edit_center_radio"
                    android:layout_width="80dp"
                    android:textSize="15sp"
                    android:focusable="false"
                    android:gravity="center"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/aband" />
                <EditText
                    android:id="@+id/bandwidth_radio"
                    android:textSize="15sp"
                    android:focusable="false"
                    android:gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <RadioButton
                android:id="@+id/straight_select_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chooseSeg"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    android:text="@string/freqBand" />
                <Spinner
                    android:id="@+id/Spinner_base_radio"
                    android:layout_width="220dp"
                    style="@style/spinner_style"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RadioGroup>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="区域地理半径/分辨率设置"
        android:textSize="18sp"
        android:gravity="bottom"
        android:textColor="#000000"
        android:background="#73b9a2"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:text="@string/radiuShow" />
        <EditText
            android:id="@+id/et_radius_radio"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingBottom="10dp"
           android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:text="@string/dieta" />
        <EditText
            android:id="@+id/et_dieta_radio"
            android:layout_width="160dp"
            style="@style/spinner_style"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="间隔时间"
        android:textSize="18sp"
        android:gravity="bottom"
        android:textColor="#000000"
        android:background="#73b9a2"

        />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:text="@string/freshTime" />
       <EditText
           android:id="@+id/et_freshTime_radio"
           android:layout_width="160dp"
           android:layout_height="40dp"
           android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="秒"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="设置时间"
        android:textSize="18sp"
        android:gravity="bottom"
        android:textColor="#000000"
        android:background="#73b9a2"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:text="起始时间："
            android:background= "#11000044"/>
        <EditText
            android:id="@+id/inputTime1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:focusable="false"
            android:inputType="none"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:text="终止时间："
            android:background= "#11000044"/>
        <EditText
            android:id="@+id/inputTime2"
            android:layout_width="fill_parent"
            android:textSize="10sp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            android:gravity="center"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_mapbase_setting"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/setting"/>

</LinearLayout>
